# turboquant

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  WORK_HISTORY_SUMMARY.md  pyproject.toml
.continue/: config.yaml
.continue/rules/: tool-use-fallback.md
assets/: sample_grid.ppm
reports/benchmarks/: gguf_runner_qwen35b_q8_vs_turbo_20260604.md  lean_direct_128k_report_20260601.md  q8_kv_baseline_alignment_20260603.md  qwen_mode_sweep.csv  qwen_vs_turboquant_plus.csv  qwen_wikitext2_ppl.csv
reports/notes/: math_mapping.md
scripts/: compare_turboquant_plus.py  eval_mlx_gemma4_turboquant_kv.py  eval_mlx_input_embedding_accuracy.py  eval_mlx_turboquant_kv_memory.py  eval_mlx_vlm_turboquant_kv.py  eval_qwen_wikitext2_ppl.py  run_gemma4_long_context_throughput.py  run_gguf_runner_turbo_repro.py  run_glove_benchmark.py  run_inner_product_eval.py  run_longbench_e_mlx.py  run_mlx_needle_benchmark.py  run_mlx_smoke.py  run_mlx_turboquant_prompt.py  run_mlx_vlm_smoke.py  run_nn_benchmark.py  run_qwen_mode_benchmark.py  run_qwen_vlm_turboquant_sweep.py  run_synthetic_mse_eval.py  serve_openai_gemma4.py
src/turboquant/: __init__.py  benchmark_utils.py  cache.py  datasets.py  distributions.py  hf_cache.py  kv_cache.py  lloyd_max.py  metal_kernels.py  metrics.py  mlx_attention.py  mlx_quantizer.py  mlx_vlm_utils.py  qjl.py  (+5 more)
tests/: test_benchmark_utils.py  test_direct_kv_cache.py  test_kv_cache.py  test_lloyd_max.py  test_mlx_attention.py  test_mlx_quantizer.py  test_mse_quantizer.py  test_openai_compatible_server.py  test_prod_quantizer.py  test_qjl.py  test_rotation.py
