[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "Reference TurboQuant implementation from arXiv:2504.19874"
requires-python = ">=3.9"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
llm = ["mlx-lm>=0.31.1"]
benchmarks = ["datasets>=4.8.4", "h5py>=3.16.0"]

[tool.setuptools.packages.find]
where = ["src"]
